1.0.2-devel
======================

 * Code cleanup removing lots of unused import statements.
   [hannosch]

 * Fixed two issues with PathCriterion.  It was using depth 0 to get subfolders,
   the proper parameter is depth -1.  Also, in order to properly handle the
   references it holds, it must itself be cataloged in the UID catalog, and
   have its references cataloged.
   [alecm]

 * Fixed issue causing archetypes schema update to fail due to topic not
   checking syndication state in initializeArchetype.
   [alecm]

 * Added missing alternate views for folderish types.
   [alecm]

1.0.1-final 2005-10-13
======================

 * Fixes for http://members.plone.org/collector/4709 __bobo_traverse__ doesn't
   need or want a RESPONSE argument.
   [alecm]

 * Fixed http://members.plone.org/collector/4734 It is generally a bad idea
   to check permissions in bobo_traverse methods, especially permissions
   that don't exist, especially if you then try to raise an exception that
   you haven't actually imported.
   [alecm]

 * Fix two small i18n default text inconsistencies
   [hannosch]

1.0.0-final 2005-09-05
======================

 * Packaged 1.0.0 final with a tip of the hat to Christian Heimes who has
   disappeared from our radar. We miss you, dude.
   [stefan]
 
 * Made migration more tolerant of conflicting ids due to auto-created content
   from manage_afterAdd or similar.  Fixes http://plone.org/collector/4468
   [alecm]

 * Moved the exclude from navigation checkbox back to the properties tab, on
   folderish objects, per request from limi.
   [alecm]

 * Fixed two Smart folder issues: http://members.plone.org/collector/4594
   we now fail gracefully on bad limit settings, and
   http://members.plone.org/collector/4601 added show/hide all link to the
   medatata control panel.
   [alecm]

 * Changed Subject index/metadata title to Keywords, and added appropriate
   description.
   [alecm]

1.0.0-rc5 2005-08-18
====================
